WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
130298
PlatformTimeRanges::nearest() truncates closestDelta values from double to float
https://bugs.webkit.org/show_bug.cgi?id=130298
Summary
PlatformTimeRanges::nearest() truncates closestDelta values from double to float
David Kilzer (:ddkilzer)
Reported
2014-03-15 21:54:21 PDT
WebCore/platform/graphics/PlatformTimeRanges.cpp:210:28: error: absolute value function 'fabsf' given an argument of type 'double' but has parameter of type 'float' which may cause truncation of value [-Werror,-Wabsolute-value] closestDelta = fabsf(startTime - time); ^ WebCore/platform/graphics/PlatformTimeRanges.cpp:210:28: note: use function 'fabs' instead closestDelta = fabsf(startTime - time); ^~~~~ fabs WebCore/platform/graphics/PlatformTimeRanges.cpp:214:28: error: absolute value function 'fabsf' given an argument of type 'double' but has parameter of type 'float' which may cause truncation of value [-Werror,-Wabsolute-value] closestDelta = fabsf(endTime - time); ^ WebCore/platform/graphics/PlatformTimeRanges.cpp:214:28: note: use function 'fabs' instead closestDelta = fabsf(endTime - time); ^~~~~ fabs 2 errors generated.
Attachments
Patch v1
(3.28 KB, patch)
2014-03-15 22:05 PDT
,
David Kilzer (:ddkilzer)
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
David Kilzer (:ddkilzer)
Comment 1
2014-03-15 22:05:51 PDT
Created
attachment 226831
[details]
Patch v1
WebKit Commit Bot
Comment 2
2014-03-16 10:05:44 PDT
Comment on
attachment 226831
[details]
Patch v1 Clearing flags on attachment: 226831 Committed
r165701
: <
http://trac.webkit.org/changeset/165701
>
WebKit Commit Bot
Comment 3
2014-03-16 10:05:49 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug