PlatformTimeRanges::nearest() truncates closestDelta values from double to float <http://webkit.org/b/130298>

Reviewed by Darin Adler.

Fixes the following build failures using trunk clang:

    WebCore/platform/graphics/PlatformTimeRanges.cpp:210:28: error: absolute value function 'fabsf' given an argument of type 'double' but has parameter of type 'float' which may cause truncation of value [-Werror,-Wabsolute-value]
                closestDelta = fabsf(startTime - time);
                               ^
    WebCore/platform/graphics/PlatformTimeRanges.cpp:210:28: note: use function 'fabs' instead
                closestDelta = fabsf(startTime - time);
                               ^~~~~
                               fabs
    WebCore/platform/graphics/PlatformTimeRanges.cpp:214:28: error: absolute value function 'fabsf' given an argument of type 'double' but has parameter of type 'float' which may cause truncation of value [-Werror,-Wabsolute-value]
                closestDelta = fabsf(endTime - time);
                               ^
    WebCore/platform/graphics/PlatformTimeRanges.cpp:214:28: note: use function 'fabs' instead
                closestDelta = fabsf(endTime - time);
                               ^~~~~
                               fabs

* platform/graphics/PlatformTimeRanges.cpp:
(WebCore::PlatformTimeRanges::nearest): Extract start and end
time deltas into local variables so they don't have to be
computed twice, using fabs() instead of fabsf().


Canonical link: https://commits.webkit.org/148286@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@165701 268f45cc-cd09-0410-ab3c-d52691b4dbfc